# starport-experiments

direct_syscall_enumeration/: Cargo.toml
dll_runner/: Cargo.toml
dll_runner/src/: main.rs
dll_stuff/: Cargo.toml  nohup.out
dll_stuff/src/: lib.rs
dump_process/: Cargo.toml
hashes/src/: main.rs
indirect_syscall_enumeration/: Cargo.toml
remote_dll_injecter/: Cargo.toml  sample.c
remote_dll_injecter/src/: main.rs
shellcode_runner/: Cargo.toml
shellcode_runner/src/: main.rs
starport_implant/: Cargo.toml
xor_obfuscator/: Cargo.toml
xor_obfuscator/src/: lib.rs  main.rs
