[package]
name = "dll_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dll_stuff = { path = "../dll_stuff" }

[dependencies.windows]
version = "0.54"
features = ["Win32_System_LibraryLoader", "Win32_System_Threading"]
