[package]
name = "dll_stuff"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]

# [build-dependencies]
# windows = "0.54"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
